Bluetooth: macOS: Cancelling StopNotifySession commands.

When cancelling StopNotifiySession command should remove them from the
queue of commands.

BUG=682583

Review-Url: https://codereview.chromium.org/2644463005
Cr-Commit-Position: refs/heads/master@{#444791}

Former-commit-id: 0b6e266b8955aa81a7dcc4ea4d3796e5be9f7cce